--- a/bootstrap/conFusion/css/styles.css
+++ b/bootstrap/conFusion/css/styles.css
@@ -41,3 +41,10 @@ body {
 .copyright {
   margin: 30px 0px;
 }
+
+.tab-content {
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  padding: 10px;
+}
