--- a/bootstrap/conFusion/css/styles.css
+++ b/bootstrap/conFusion/css/styles.css
@@ -60,3 +60,12 @@ body {
   left: 0;
   min-height: 300px;
 }
+.modal {
+  color: black;
+}
+#carouselbutton {
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
+  z-index: 1;
+}
